# moveme

./: .gitignore  CMakeLists.txt
scripts/: build-sdl2.sh  print_whole_project.sh
src/: main.cpp
src/entities/: BodyPart.cpp  BodyPart.h  Constraint.cpp  Constraint.h  Creature.cpp  Creature.h  GameState.h  Limb.cpp  Limb.h  Vector2.h
src/frameworks/: SDLApp.cpp  SDLApp.h
src/interfaces/: IApplication.h
src/use_cases/: ApplicationManager.cpp  ApplicationManager.h
